# agent-reference-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
arm_core/: __init__.py  audit_log.py  capability_token.py  mcp_wrapper.py  policy_engine.py
arm_core/layers/: __init__.py  base.py  hard_boundaries.py  manual_policy.py  provenance.py  schema_derived.py
arm_provenance/: __init__.py  graph_aware_engine.py  graph_provenance_layer.py  privileged_action_layer.py  provenance_graph.py
attacks/01-mcp-tool-poisoning/: README.md  malicious_server.py  protected_server.py  simulate_attack.py  test_with_llm.py  test_with_openai.py
attacks/02-context-window-exfiltration/: README.md  malicious_server.py  protected_server.py  simulate_attack.py  test_with_llm.py  test_with_openai.py  trusted_server.py
attacks/03-layered-comparison/: README.md  compare_layers.py
benchmarks/: agentdojo_adapter.py  run_benchmark.py  run_gemma4_workspace.sh  test_adapter.py
demos/: causality-laundering.py  head-to-head.py  side-by-side.py
demos/output/: causality-laundering.dot  head-to-head.dot
tests/: test_graph_engine.py  test_privileged_action.py  test_provenance_graph.py
